# Fibonacci_proj

./: CMakeLists.txt  README.md
inc/: fibonacci.h
src/: fibonacci_itter.c  fibonacci_main.c  fibonacci_recurcive.c
